Kubernetes Media Server/qbittorrent-gluetun.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
  namespace: mediaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/dockermediaserver-default: "true"
        io.kompose.service: qbittorrent
    spec:
      containers:
        - name: gluetun
          image: ghcr.io/qdm12/gluetun:v3.40.4
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add: 
                - "NET_ADMIN"
          volumeMounts:
            - mountPath: /gluetun
              name: gluetun-conf
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: WEBUI_PORT_ENV
              value: "8080"
            - name: TORRENTING_PORT
              value: "32429"
            - name: QBITTORRENTPASS
              valueFrom:
                secretKeyRef:
                  name: qbittorrent-secret
                  key: password
          image: linuxserver/qbittorrent
          imagePullPolicy: Always
            # securityContext:
            # privileged: true
              #            capabilities:
              # add:
              #  - "NET_ADMIN"
          name: qbittorrent
          ports:
            - containerPort: 8080
            - containerPort: 6881
            - containerPort: 6881
              protocol: UDP
          resources: {}
            #livenessProbe:
            #exec:
            #command:
            #- bash
            #- -c
            #- "curl -sLic cookie --header 'Referer: http://localhost:8080' http://localhost:8080/api/v2/auth/login --data 'username=admin&password='$QBITTORRENTPASS'' >> /dev/null && curl -sLb cookie http://localhost:8080/api/v2/transfer/info | jq .connection_status | grep 'connected'"
            #initialDelaySeconds: 20
            #periodSeconds: 20
            #timeoutSeconds: 5
            #failureThreshold: 1
          volumeMounts:
            - mountPath: /config
              name: qb-conf
            - mountPath: /downloads
              name: qb-nfs0
            - mountPath: /etc/timezone
              name: qbittorrentvpn-hostpath
              readOnly: true
      restartPolicy: Always
      volumes:
        - persistentVolumeClaim:
            claimName: qb-longhorn
          name: qb-conf
        - nfs:
            server: 172.31.0.15
            readOnly: false
            path: /mnt/Main/kubernetes/Torrents
          name: qb-nfs0
        - persistentVolumeClaim:
            claimName: gluetun-longhorn
          name: gluetun-conf
        - hostPath:
            path: /etc/timezone
          name: qbittorrentvpn-hostpath
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
  namespace: mediaserver
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "6881"
      port: 6881
      targetPort: 6881
    - name: 6881-udp
      port: 6881
      protocol: UDP
      targetPort: 6881
  selector:
    io.kompose.service: qbittorrent
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
  name: qbittorrent-ingress-private
  namespace: mediaserver
spec:
  ingressClassName: private-nginx
  tls:
  - hosts:
      - qbittorrent.andrewsutliff.com
    secretName: qbittorrent-http-tls
  rules:
  - host: "qbittorrent.andrewsutliff.com"
    http:
      paths:
      - backend:
          service:
            name: qbittorrent
            port:
              number: 8080
        path: /
        pathType: Prefix
