Kubernetes Media Server/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: radarr
  name: radarr
  namespace: mediaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/dockermediaserver-default: "true"
        io.kompose.service: radarr
    spec:
      containers:
        - env:
            - name: TZ
              value: America/New_York
            - name: UMASK
              value: "022"
          image: linuxserver/radarr
          name: radarr
          ports:
            - containerPort: 7878
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: radarr-conf
            - mountPath: /movies
              name: radarr-nfs0
            - mountPath: /downloads
              name: radarr-nfs1
      restartPolicy: Always
      volumes:
        - persistentVolumeClaim:
            claimName: radarr-longhorn
          name: radarr-conf
        - nfs:
            server: 172.31.0.15
            path: /mnt/Main/kubernetes/Movies
            readOnly: false
          name: radarr-nfs0
        - nfs:
            server: 172.31.0.15
            path: /mnt/Main/kubernetes/Torrents
            readOnly: false
          name: radarr-nfs1
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: radarr
  name: radarr
  namespace: mediaserver
spec:
  ports:
    - name: "7878"
      port: 7878
      targetPort: 7878
  selector:
    io.kompose.service: radarr
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
  name: radarr-ingress-private
  namespace: mediaserver
spec:
  ingressClassName: private-nginx
  tls:
  - hosts:
      - radarr.andrewsutliff.com
    secretName: radarr-http-tls
  rules:
  - host: "radarr.andrewsutliff.com"
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              number: 7878
        path: /
        pathType: Prefix
