Kubernetes Media Server/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: sonarr
  name: sonarr
  namespace: mediaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/dockermediaserver-default: "true"
        io.kompose.service: sonarr
    spec:
      containers:
        - env:
            - name: TZ
              value: America/New_York
            - name: UMASK
              value: "022"
          image: linuxserver/sonarr
          imagePullPolicy: Always
          name: sonarr
          ports:
            - containerPort: 8989
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: sonarr-conf
            - mountPath: /tv
              name: sonarr-nfs0
            - mountPath: /downloads
              name: sonarr-nfs1
      restartPolicy: Always
      volumes:
        - persistentVolumeClaim:
            claimName: sonarr-longhorn
          name: sonarr-conf
        - nfs:
            server: 172.31.0.15
            path: /mnt/Main/kubernetes/TV
            readOnly: false
          name: sonarr-nfs0
        - nfs:
            server: 172.31.0.15
            path: /mnt/Main/kubernetes/Torrents
            readOnly: false
          name: sonarr-nfs1
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: sonarr
  name: sonarr
  namespace: mediaserver
spec:
  ports:
    - name: "8989"
      port: 8989
      targetPort: 8989
  selector:
    io.kompose.service: sonarr
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
  name: sonarr-ingress-private
  namespace: mediaserver
spec:
  ingressClassName: private-nginx
  tls:
  - hosts:
      - sonarr.andrewsutliff.com
    secretName: sonarr-http-tls
  rules:
  - host: "sonarr.andrewsutliff.com"
    http:
      paths:
      - backend:
          service:
            name: sonarr
            port:
              number: 8989
        path: /
        pathType: Prefix
